--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,9 @@ h4, h5, h6,
 h1, h2, h3 {margin-top: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
-
+.account{
+  margin-right: -200px;
+}
 html, body{
   	font-family: 'Roboto', sans-serif;
     font-size: 100%;
