--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -181,11 +181,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Name</th>
+                        <th>Product Name</th>
                         <th>Price</th>
                         <th>Desc</th>
                         <th>Status</th>
-                        <th>Img</th>
+                        <th>Image</th>
+                        <th>Action</th>
                         
                     </tr>
                 </thead>
