--- a/src/app/backend/dashboard/dashboard.component.html
+++ b/src/app/backend/dashboard/dashboard.component.html
@@ -54,8 +54,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="nav navbar-nav navbar-right">
 
 			</div>
-			<form class="navbar-form navbar-right">
-              <input type="text" class="form-control" value="Search..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search...';}">
+			<form class="search12">
+              <input type="text" class="form-control" value="Search..." style="width:300px;" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search...';}">
             </form>
                  <div class="account" >
 	        		<a href="#" style="color:black; font-size:20px;"  ><img style="width:33px; height:33px; " src="https://www.pinclipart.com/picdir/big/20-200798_my-account-icon-my-account-icon-vector-clipart.png"></a>
