--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,9 @@ p {margin: 0;}
 .account{
   margin-right: -200px;
 }
+.search12{
+  margin-right: -200px;
+}
 html, body{
   	font-family: 'Roboto', sans-serif;
     font-size: 100%;
