--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -138,30 +138,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	        		</ul>
 	      		</li>
 			</ul>
-			<form class="navbar-form navbar-right">
-              <input type="text" class="form-control" value="Search..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search...';}">
+						<form class="search12">
+              <input type="text" class="form-control" value="Search..." style="width:300px;" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search...';}">
             </form>
+                 <div class="account" >
+	        		<a href="#" style="color:black; font-size:20px;"  ><img style="width:33px; height:33px; " src="https://www.pinclipart.com/picdir/big/20-200798_my-account-icon-my-account-icon-vector-clipart.png"></a>
+
+     </div>
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
-                    <ul class="navbar-nav mr-auto" id="side-menu">
+                      <ul class="navbar-nav mr-auto" id="side-menu">
                         <li>
-                            <a routerLink="/admin/dashboard">Dashboard</a>
+                            <a routerLink="/admin/dashboard"><img style="width:33px; height:33px; " src="https://cdn2.iconfinder.com/data/icons/thin-charts-analytics/24/thin-1086_kpi_dashboard_monitor-512.png"> &nbsp;Dashboard</a>
                         </li>
                         <li>
-                            <a routerLink="/admin/manage">Product</a>
+                            <a routerLink="/admin/manage"><img style="width:33px; height:33px; " src="https://i.ya-webdesign.com/images/box-icon-png.png"> &nbsp;Product</a>
                             
                          
                         </li>
                         <li>
-                            <a routerLink="/admin/product-add">Add Product</a>
+                            <a routerLink="/admin/product-add"><img style="width:33px; height:33px; " src="https://www.searchpng.com/wp-content/uploads/2019/03/Add-Icon-PNG-715x715.png"> &nbsp;Add Product</a>
                             
                            
                         </li>
-                        
-                        
-                        
-                       
-                        
+
                     </ul>
                 </div>
              
