6 files modified, 3 added, 3 deleted

--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -199,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <td ><a href="#"><img   class="card-img-top" [src]="product.img" height="200px" alt=""></a></td>
                         <!-- <td><button class="btn btn-primary" (click)="removeItem(product.id)">Delete</button></td> -->
                         <!-- <td><button class="btn btn-primary" routerLink="/product/{{product.id}}">Detail</button></td> -->
-                        <td><button class="btn btn-warning" routerLink="/admin/product/edit/{{product.id}}">Edit</button></td>
+                        <td><button class="btn btn-warning" routerLink="/product/edit/{{product.id}}">Edit</button></td>
                         <td><button class="btn btn-warning"(click)="removeItem(product.id)">Delete</button></td>
                     </tr>
                 </tbody>
