--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -196,7 +196,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <td >${{product.price}}</td>
                         <td >{{product.desc}}</td>
                         <td >{{product.status ? 'In stock': 'Out stock'}}</td>
-                        <td ><a href="#"><img   class="card-img-top" [src]="product.img" height="200px" alt=""></a></td>
+                        <td ><img   class="card-img-top" [src]="product.img" style="height:200px;" alt=""></td>
                         <!-- <td><button class="btn btn-primary" (click)="removeItem(product.id)">Delete</button></td> -->
                         <!-- <td><button class="btn btn-primary" routerLink="/product/{{product.id}}">Detail</button></td> -->
                         <td><button class="btn btn-warning" routerLink="/product/edit/{{product.id}}">Edit</button></td>
